    changed.
20. Fix background painting in lyrics view for non-oxygen styles.
21. Enable mouse-tracking for all list/tree views.
22. Allow Icon/List for library view.
23. Add option to show artist images in library view.
24. Dont allow selection to overlap tab-widget border-lines in preferences
    dialog (Qt-only build).
25. Show playlists in library and album views (requires MPD 0.17)

0.7.1
-----
1. When saving track name to cache, save the actual name, not the displayed
   name.
2. Attempt to fix errors in cache where the displayed name was saved.
3. Fix tag-editor's 'Various Artists' workaround when all tracks is selected.
4. Set minimum font size for info page.
5. Only automatically start playing songs if we are replacing the playqueue, or
   the song is the first song added via the commandline.
6. Fix transcoding with new ffmpeg - thanks to Martin Blumenstingl
   for the patch.
7. Have cantata-dynamic helper script send a dbus message when it starts and
   stops - so that cantata main window can show the current status if the helper
   is started externally.
8. If 'Return'/'Enter' is pressed when play queue has focus, start playing from
   the first selected song.
9. Fix Qt-only install failure (cannot find RUNTIME).

0.7.0
-----
 1. Add dynamic playlist support.
 2. Fix detection of non standard filename covers.
 3. Clear any existing search when 'Locate In Library' is activated.
 4. In tag-editor, only set placeholder text to '(Various)' for fields where
    there are actually some values set.
 5. Add now playing info to MPRIS interface - thanks to Martin Blumenstingl
    for the patch.
 6. Better, less hacky, workaround for QAbstractItemView shift-select bug
    (https://bugreports.qt-project.org/browse/QTBUG-18009). Thanks to Spitfire
    from qtcentre.org forums for fix.
 7. Add a 'search' action (Ctrl-F) that will move focus to curent tab's search
    field - or to play queue search field (if play queue has focus).